# reactnative-jsi.trial

./: README.md
cpp-compat/: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-cpp-compat.podspec  tsconfig.json
cpp-compat/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
cpp-compat/cpp/: react-native-cpp-compat.cpp  react-native-cpp-compat.h
cpp-compat/example/: app.json  package.json
cpp-compat/ios/: CppCompat.h  CppCompat.mm
cpp-compat/src/: NativeCppCompat.ts  index.tsx
cpp-simple/: CONTRIBUTING.md  README.md  package.json  react-native-cpp-simple.podspec  tsconfig.json
cpp-simple/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  (+1 more)
cpp-turbo/: CONTRIBUTING.md  README.md  package.json  react-native-cpp-turbo.podspec  tsconfig.json
cxx-legacy/: CONTRIBUTING.md  README.md  package.json  react-native-cxx-legacy.podspec  tsconfig.json
cxx-legacy/android/: Android-prebuilt.cmake  CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
cxx-legacy/android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
cxx-legacy/android/src/main/java/com/cxxlegacy/: CxxLegacyModule.java  CxxLegacyPackage.java
jsi-rn69/: CONTRIBUTING.md  README.md  package.json  react-native-jsi-rn69.podspec  tsconfig.json
jsi-rn70/: CONTRIBUTING.md  README.md  package.json  react-native-jsi-rn70.podspec  tsconfig.json
jsi-rn70/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
jsi-rn70/android/src/main/: AndroidManifest.xml
jsi-rn70/android/src/main/java/com/jsirn70/: JsiRn70Module.java  JsiRn70Package.java
jsi-simple/: CONTRIBUTING.md  README.md  package.json  react-native-jsi-simple.podspec  tsconfig.json
jsi-simple/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
jsi-simple/android/src/main/: AndroidManifest.xml
jsi-simple/android/src/main/java/com/jsisimple/: JsiSimpleModule.java  JsiSimplePackage.java
(+182 files in other folders)
